fix overflow

--- a/experiment/simulation/css/main.css
+++ b/experiment/simulation/css/main.css
@@ -16,6 +16,7 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
+  padding: 10px;
   display: grid;
   grid-template-areas:
     " 1 sediment cylinder cylinder "
